美化了UI界面，添加了问题详情和菜单栏，完善了problem panel